src/render/snapshots/webgit__render__tree__tests__tree_html.snap
---
source: src/render/tree.rs
expression: html
---
<table class="tree-table">
    <thead>
        <tr>
            <th>Mode</th>
            <th>Name</th>
        </tr>
    </thead>
    <tbody>
        
        <tr>
            <td class="mode">d---------</td>
            <td class="name">
                
                <a href="#!/tree/src">src</a>
                
            </td>
        </tr>
        
        <tr>
            <td class="mode">-rw-r--r--</td>
            <td class="name">
                
                <a class="file" href="#!/tree/README.md"
                    >README.md</a
                >
                
            </td>
        </tr>
        
        <tr>
            <td class="mode">-rwxr-xr-x</td>
            <td class="name">
                
                <a class="file" href="#!/tree/scripts/build.sh"
                    >build.sh</a
                >
                
            </td>
        </tr>
        
    </tbody>
</table>
