src/render/snapshots/webgit__render__tree__tests__tree_html_submodule_and_symlinks.snap
---
source: src/render/tree.rs
expression: "render(TreeProps { entries: special_rows(), head_suffix: String::new(), })"
---
<table class="tree-table">
<thead>
<tr>
<th>Mode</th>
<th>Name</th>
<th>
</th>
</tr>
</thead>
<tbody>
<tr>
<td class="mode">m---------</td>
<td class="name">
<span class="submodule">vendor</span>
<span class="submodule-commit"> @ 1a3e64c6</span>
</td>
<td class="links">
</td>
</tr>
<tr>
<td class="mode">l---------</td>
<td class="name">
<a href="#!/tree/src/pending" class="file">pending</a>
</td>
<td class="links">
<a href="#!/blame/src/pending" class="blame-link">blame</a>
</td>
</tr>
<tr>
<td class="mode">l---------</td>
<td class="name">
<a href="#!/tree/src/lib.rs" class="file">lib.rs</a>
<span class="symlink-arrow"> -&gt; </span>
<a href="#!/tree/lib.rs" class="file">../lib.rs</a>
</td>
<td class="links">
<a href="#!/blame/src/lib.rs" class="blame-link">blame</a>
</td>
</tr>
<tr>
<td class="mode">l---------</td>
<td class="name">
<a href="#!/tree/src/outside" class="file">outside</a>
<span class="symlink-arrow"> -&gt; </span>
<span class="symlink-target">/etc/passwd</span>
</td>
<td class="links">
<a href="#!/blame/src/outside" class="blame-link">blame</a>
</td>
</tr>
</tbody>
</table>
