src/render/snapshots/webgit__render__tree__tests__tree_html_with_head.snap
---
source: src/render/tree.rs
expression: "render(TreeProps\n{ entries: fixture_rows(), head_suffix: \"?h=stable\".to_string(), })"
---
<table class="tree-table">
<thead>
<tr>
<th>Mode</th>
<th>Name</th>
<th>
</th>
</tr>
</thead>
<tbody>
<tr>
<td class="mode">d---------</td>
<td class="name">
<a href="#!/tree/src?h=stable">src</a>
</td>
<td class="links">
<a href="#!/log/src?h=stable" class="log-link">log</a>
</td>
</tr>
<tr>
<td class="mode">-rw-r--r--</td>
<td class="name">
<a href="#!/tree/README.md?h=stable" class="file">README.md</a>
</td>
<td class="links">
<a href="#!/log/README.md?h=stable" class="log-link">log</a> · <a href="#!/blame/README.md?h=stable" class="blame-link">blame</a>
</td>
</tr>
<tr>
<td class="mode">-rwxr-xr-x</td>
<td class="name">
<a href="#!/tree/scripts/build.sh?h=stable" class="file">build.sh</a>
</td>
<td class="links">
<a href="#!/log/scripts/build.sh?h=stable" class="log-link">log</a> · <a href="#!/blame/scripts/build.sh?h=stable" class="blame-link">blame</a>
</td>
</tr>
</tbody>
</table>
